<resources>
    <string name="app_name">Homework2</string>
    <string name="DescriptionTxt">Description</string>
    <string name="ColorTxt">Color</string>
    <string name="AddCartTxt">Add to Cart</string>
    <string name="AddedCartTxt">Added to Cart</string>
    <string name="BicycleTxt">Vintage Bicycle</string>
    <string name="MeasurementTxt">Measurement</string>
    <string name="mlDescription">Custom lightweight steel frame. Unrestored in beautiful original condition. Lightly used and well kept. Full super record build.</string>
    <string name="mlMeasurement">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismoud kdjflk jfskjdflakjd faskdjflkasdjf sdkfjas lkdfjkdfjlkajdfkjs dfksdj fskdjf kasdjfksa dfksdjfksdjf sdfjksdjfksdjf sdfkj skdfj sdfjksldf slkdjf sdfjlkdsjf sjdflkjsdf sjdfk sdjfklsdjf sdfjslkdfj skdjfsdfjl sd fjklkdfjskdjfsjdfksdjflksajdfksjdf asldkfj </string>
    <string name="likeToast">+1	to	Vintage Bicycle</string>
</resources>
